# onto-doc-extract

./: README.md  pyproject.toml
src/: data_types.py  transformer.py
src/einvoice/: data_types.py  execute.py
src/onto-doc-ext/: config.py
tests/: test_exectute.py
