[project]
name = "einvoice"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehrdad Bozorg",email = "bozorgmehrdad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf (>=1.25.4,<2.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
]

[tool.poetry]
packages = [{include = "einvoice", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

